--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==3.0.1
 attrs==19.3.0
 autobahn==20.7.1
 Automat==20.2.0
+bcrypt==3.1.7
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.6.20
@@ -14,21 +15,27 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.9.2
 daphne==2.5.0
+defusedxml==0.6.0
 Django==3.0.8
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 hiredis==1.1.0
 hyperlink==19.0.0
 idna==2.10
 incremental==17.5.0
 msgpack==1.0.0
+oauthlib==3.1.0
 psycopg2==2.8.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
+PyJWT==1.7.1
 pyOpenSSL==19.1.0
+python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
+requests-oauthlib==1.3.0
 service-identity==18.1.0
 six==1.15.0
 soupsieve==2.0.1
