--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,3 +2,5 @@ FROM nginx:1.19.0-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/conf.d
+
+#CMD ["nginx","-g","daemon off;"]
